dbgate/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dbgate
  annotations:
    cert-manager.io/cluster-issuer: "ca-issuer"
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd,default-oauth2-proxy-redirect@kubernetescrd,default-oauth2-proxy-forward@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: dbgate.k3s-kgu.gnc.recif.nc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dbgate
            port:
              number: 80
  tls:
  - hosts:
    - dbgate.k3s-kgu.gnc.recif.nc
    secretName: dbgate-k3s-kgu-dev-gnc
